--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "howler": "^2.2.4",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
